[package]
name = "gatekeeper"
version = "0.1.0"
authors = ["Shady Khalifa <dev+github@shadykhalifa.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std", "anyhow/std", "chrono/std", "chrono-tz/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "now"] }
chrono-tz = { version = "0.9", default-features = false }

[build-dependencies]
embuild = "0.31.3"
